# zkvar

./: LICENSE  Readme.md  test.hs  zkvar.cabal
src/: ZKVar.hs
