Name:                zkvar
Version:             0.1
Synopsis:            ZooKeeper configurable variable
-- Description:
License:             BSD3
License-file:        LICENSE
Author:              Kim Altintop
Maintainer:          kim@soundcloud.com
-- Copyright:
Category:            Data
Build-type:          Simple
Cabal-version:       >=1.2

Source-Repository head
  Type:     git
  Location: git://github.com/kim/zkvar.git

Library
  Exposed-modules: ZKVar
  Build-depends:   base >= 3 && < 5, zookeeper
  Ghc-Options:     -Wall -O2 -threaded
  hs-source-dirs:  src
