Name:                zkvar
Version:             0.2
Synopsis:            Zookept MVar
Description:         A little experiment abstracting Zookeeper
License:             BSD3
License-file:        LICENSE
Author:              Kim Altintop
Maintainer:          kim@soundcloud.com
Copyright:           2011 Kim Altintop
Category:            Data
Stability:           Experimental
Build-type:          Simple
Cabal-version:       >=1.2

Source-Repository head
  Type:     git
  Location: git://github.com/kim/zkvar.git

Library
  Exposed-modules: ZKVar
  Build-depends:   base >= 3 && < 5, zookeeper, bytestring
  Ghc-Options:     -Wall -O2 -threaded
  hs-source-dirs:  src
